Update Progress / Fixing Content Overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,8 +14,9 @@ section, header {
     // overflow: hidden; //This seems like the reason why my dropdown menues never show up, so I'm turning it off. This isn't how w3schools has theirs set up, but it is beyond me how they managed to get this working so effortlessly. My guess is devilmagic, but I have nothing to support this claim.
     background: #fff;
     position: fixed;
-    max-width: 860px;
-    top: 20px;
+    width: 860px;
+    // top: 20px;
+    padding-top: 20px;
     // justify-content: center;
     margin: 0 auto;
     z-index: 99;
